Fix happy-travelets section alignment

--- a/css/happy-travelers.css
+++ b/css/happy-travelers.css
@@ -1,6 +1,4 @@
 .happy-travelers {
-  width: 100%;
-  max-width: 1350px;
   display: flex;
   flex-direction: column;
   justify-content: center;
